# Mage-Game

./: Cargo.lock.orig  Cargo.toml  README.md  world.world
assets/: main.tmx
assets/environment/: environment.aseprite  environment.test.tmx  environment.tmx  ground.tsx  main.ldtk  sedfds.ldtk  stone_ground.tsx  walls.tsx
assets/environment/env_tilset/texture/: rocks.aseprite
assets/shaders/: perlin2d_material.wgsl
dev/: Notes.md  Packages.md
dev/.obsidian/: workspace.json
source_assets/: Nasty_bad_area.aseprite  logo.aseprite
source_assets/abilities/: fire_ball.aseprite  heal_orb.aseprite  ice_storm.aseprite  ice_storm_new.aseprite
source_assets_third_party/: credits.md
source_assets_third_party/env_tilset/texture/: Nasty_bad_area.aseprite
src/: animation.rs  debug.rs  main.rs  main.rs.orig  map.rs  pathfinding.rs
src/abilities/: abilities.rs  ability_particles.rs  mod.rs
src/animation/: directional_animator.rs  looping_animator.rs  mod.rs
src/damage/: damagetype.rs  health.rs  healthbar.rs  mod.rs
src/enemy/: data.rs  mod.rs  orc.rs  spawner.rs
src/entity/: damage.rs  health.rs  mod.rs  particles.rs  stat_type.rs  stats.rs
src/entity/enemy/: data.rs  mod.rs  orc.rs  spawner.rs
src/entity/player/: mod.rs
src/input/: mod.rs
src/player/: abilities.rs  abilities.rs.orig  mod.rs  playerplugin.rs
src/ui/: healthbar.rs  mod.rs  pause.rs
