[package]
name = "mage-game"
version = "0.7.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }
bevy-inspector-egui = "0.22.1"
bevy_rapier2d = { version = "0.24.0", features = [ "simd-stable", "parallel" ] }
bevy_hanabi = { version = "0.9", default-features = false, features = [ "2d" ] }
winit = "0.28"
image = "0.24.8"
bevy_aseprite = "0.12.0"
tiled = "0.11.2"
thiserror = "1.0.57"
bevy_ecs_ldtk = "0.9.0"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
