[package]
name = "mage-game"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13" }
bevy-inspector-egui = "0.23.3"
bevy_rapier2d = { version = "0.25.0", features = [ "simd-stable", "parallel" ] }
bevy_hanabi = { version = "0.10", default-features = false, features = [ "2d" ] }
image = "0.24.8"
bevy_aseprite = "0.12.0"
thiserror = "1.0.57"
rand = "0.8.5"
pathfinding = "4.9.1"
futures-lite = "2.3.0"
bevy_shader_utils = "0.7.0"
winit = "0.29.15"

[workspace]
resolver = "2"
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Mega slow compile, max aggressive opts
# [profile.release]
# lto = true
# opt-level = 3
# codegen-units = 1
# incremental = false
# debug = false
